--- a/src/pages/fanart/index.module.css
+++ b/src/pages/fanart/index.module.css
@@ -103,6 +103,7 @@
   margin: 0px 0.65rem;
   font-size: 2em;
   transition: color 0.3s ease-in-out;
+  text-decoration: none;
 }
 
 .socialLinks a:hover {
